--- a/src/components/plpproduct/Productplp.scss
+++ b/src/components/plpproduct/Productplp.scss
@@ -16,6 +16,7 @@
     &__top img {
         margin-bottom: 10px;
         width: 100%;
+        // height: 200px !important;
     }
 
     &__top h3 {
